# opengl

./: .gitignore  CMakeLists.txt  build.sh  video.sh
.devcontainer/: Dockerfile
src/: basic_pipeline.hpp  colored_cube.hpp  main.cpp  shader.hpp  shader_src.hpp
src/gl/: buffer.hpp  float_layout.hpp  framebuffer.hpp  texture.hpp  vertex_array.hpp
src/glew/: init.hpp
src/glfw/: init.hpp  window.hpp
